3.4.3/_sources/gallery/shapes_and_collections/ellipse_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/shapes_and_collections/ellipse_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_shapes_and_collections_ellipse_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_shapes_and_collections_ellipse_demo.py:


============
Ellipse Demo
============

Draw many ellipses. Here individual ellipses are drawn. Compare this
to the :doc:`Ellipse collection example
</gallery/shapes_and_collections/ellipse_collection>`.

.. GENERATED FROM PYTHON SOURCE LINES 10-37

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.patches import Ellipse


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    NUM = 250

    ells = [Ellipse(xy=np.random.rand(2) * 10,
                    width=np.random.rand(), height=np.random.rand(),
                    angle=np.random.rand() * 360)
            for i in range(NUM)]

    fig, ax = plt.subplots(subplot_kw={'aspect': 'equal'})
    for e in ells:
        ax.add_artist(e)
        e.set_clip_box(ax.bbox)
        e.set_alpha(np.random.rand())
        e.set_facecolor(np.random.rand(3))

    ax.set_xlim(0, 10)
    ax.set_ylim(0, 10)

    plt.show()




.. image:: /gallery/shapes_and_collections/images/sphx_glr_ellipse_demo_001.png
    :alt: ellipse demo
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-44

===============
Ellipse Rotated
===============

Draw many ellipses with different angles.


.. GENERATED FROM PYTHON SOURCE LINES 44-63

.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib.patches import Ellipse

    angle_step = 45  # degrees
    angles = np.arange(0, 180, angle_step)

    fig, ax = plt.subplots(subplot_kw={'aspect': 'equal'})

    for angle in angles:
        ellipse = Ellipse((0, 0), 4, 2, angle=angle, alpha=0.1)
        ax.add_artist(ellipse)

    ax.set_xlim(-2.2, 2.2)
    ax.set_ylim(-2.2, 2.2)

    plt.show()




.. image:: /gallery/shapes_and_collections/images/sphx_glr_ellipse_demo_002.png
    :alt: ellipse demo
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 64-75

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.patches`
   - `matplotlib.patches.Ellipse`
   - `matplotlib.axes.Axes.add_artist`
   - `matplotlib.artist.Artist.set_clip_box`
   - `matplotlib.artist.Artist.set_alpha`
   - `matplotlib.patches.Patch.set_facecolor`


.. _sphx_glr_download_gallery_shapes_and_collections_ellipse_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: ellipse_demo.py <ellipse_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: ellipse_demo.ipynb <ellipse_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
